# django-fast-pagination

./: LICENSE  MANIFEST.in  README.md  manage.py  requirements.txt  setup.cfg
django_fast_pagination/: manage.py
django_fast_pagination/django_fast_pagination/: settings.py  urls.py  wsgi.py
fast_pagination/: apps.py  helpers.py  tests.py
fast_pagination/management/commands/: generate_users.py
pagination_app/: asgi.py  settings.py  urls.py  wsgi.py
