[metadata]
name = django-fast-paginator
version = v1.0.4
description = A Django app to paginate querysets faster.
long_description = file: README.md
long_description_content_type = text/markdown
author = Tolga Bilbey
author_email = bilbeyt@gmail.com
license = MIT
url = https://github.com/bilbeyt/django-fast-pagination
download_url = https://github.com/bilbeyt/django-fast-pagination/archive/v1.0.4.tar.gz
keywords =
    django
    pagination
    optimization
platform = any
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = 
    fast_pagination
python_requires = >= 3.0.0
setup_requires =
    setuptools
test_requires =
    pytest
    pytest-benchmark
    pytest-django
    Django
